Add Solution Section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -185,6 +185,203 @@
     </section>
     <!-- End of Trusted Section -->
 
+    <!-- Start Of Solution Section -->
+    <section class="solution_section">
+      <div class="container">
+        <!-- Start of Section Heading -->
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <div class="section_header_wrapper text-center">
+              <h2 class="heading_title">
+                Unlocking the cloud operating model for enterprises
+              </h2>
+              <p class="heading_desc">
+                Enabling the world's largest companies to deliver applications
+                faster by helping transition from manual processes and ITIL
+                practices to self-service automation and DevOps practices.
+              </p>
+              <a href="#" class="heading_link transtion"
+                >learn More
+                <svg
+                  class="bi bi-arrow-right transtion"
+                  width="1em"
+                  height="1em"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                    clip-rule="evenodd"
+                  />
+                  <path
+                    fill-rule="evenodd"
+                    d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- End Of Section Heading -->
+
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="single_solution transtion mb-3">
+              <div class="icon">
+                <img src="./images/home-solution-consul.svg" alt="" />
+              </div>
+              <div class="body">
+                <h3><strong>Infrastructure</strong> automation</h3>
+                <p>
+                  Automate provisioning, compliance and management of cloud
+                  infrastructure using a common workflow.
+                </p>
+                <span class="transtion"
+                  >Explore Terraform
+                  <svg
+                    class="bi bi-arrow-right transtion"
+                    width="1em"
+                    height="1em"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                      clip-rule="evenodd"
+                    />
+                    <path
+                      fill-rule="evenodd"
+                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!--End Of col-sm-6-->
+          <div class="col-sm-6">
+            <div class="single_solution transtion mb-3">
+              <div class="icon">
+                <img src="./images/home-solution-nomad.svg" alt="" />
+              </div>
+              <div class="body">
+                <h3><strong>Security</strong> automation</h3>
+                <p>
+                  Automate provisioning, compliance and management of cloud
+                  infrastructure using a common workflow.
+                </p>
+                <span class="transtion"
+                  >Explore Vault
+                  <svg
+                    class="bi bi-arrow-right transtion"
+                    width="1em"
+                    height="1em"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                      clip-rule="evenodd"
+                    />
+                    <path
+                      fill-rule="evenodd"
+                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!--End Of col-sm-6-->
+
+          <div class="col-sm-6">
+            <div class="single_solution transtion mb-3">
+              <div class="icon">
+                <img src="./images/home-solution-terraform.svg" alt="" />
+              </div>
+              <div class="body">
+                <h3><strong>Networking</strong> automation</h3>
+                <p>
+                  Automate provisioning, compliance and management of cloud
+                  infrastructure using a common workflow.
+                </p>
+                <span class="transtion"
+                  >Explore Console
+                  <svg
+                    class="bi bi-arrow-right transtion"
+                    width="1em"
+                    height="1em"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                      clip-rule="evenodd"
+                    />
+                    <path
+                      fill-rule="evenodd"
+                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!--End Of col-sm-6-->
+          <div class="col-sm-6">
+            <div class="single_solution transtion mb-3">
+              <div class="icon">
+                <img src="./images/home-solution-vault.svg" alt="" />
+              </div>
+              <div class="body">
+                <h3><strong>Application</strong> automation</h3>
+                <p>
+                  Automate provisioning, compliance and management of cloud
+                  infrastructure using a common workflow.
+                </p>
+                <span class="transtion"
+                  >Nomad Console
+                  <svg
+                    class="bi bi-arrow-right transtion"
+                    width="1em"
+                    height="1em"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                      clip-rule="evenodd"
+                    />
+                    <path
+                      fill-rule="evenodd"
+                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!--End Of col-sm-6-->
+        </div>
+      </div>
+    </section>
+    <!-- End Of Solution Section -->
+
     <script>
       window.jQuery ||
         document.write(
