Fix icon paths for solutions segment

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -231,7 +231,7 @@
           <div class="col-sm-6">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/home-solution-consul.svg" alt="" />
+                <img src="./images/icon-network.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Infrastructure</strong> automation</h3>
@@ -268,7 +268,7 @@
           <div class="col-sm-6">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/home-solution-nomad.svg" alt="" />
+                <img src="./images/icon-windows.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Security</strong> automation</h3>
@@ -306,7 +306,7 @@
           <div class="col-sm-6">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/home-solution-terraform.svg" alt="" />
+                <img src="./images/icon-network.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Networking</strong> automation</h3>
@@ -343,7 +343,7 @@
           <div class="col-sm-6">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/home-solution-vault.svg" alt="" />
+                <img src="./images/icon-shield.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Application</strong> automation</h3>
