Add product section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -21,7 +21,6 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="./css/style.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -381,6 +380,122 @@
       </div>
     </section>
     <!-- End Of Solution Section -->
+
+    <!-- Start of Product Section -->
+    <section class="product_section">
+      <div class="container">
+        <!-- Start of Section Heading -->
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <div class="section_header_wrapper text-center">
+              <h2 class="heading_title">
+                our products
+              </h2>
+              <p class="heading_desc">
+                Delivering cloud infrastructure automation for operations,
+                security, networking, and application delivery.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- End Of Section Heading -->
+
+        <!-- Start of Product Area -->
+        <div class="product_section_area">
+          <ul class="product_menu_list list-inline">
+            <li class="product_menu_item">
+              <a href="#overview">overview</a>
+            </li>
+            <li class="product_menu_item">
+              <a href="#provision">provision</a>
+            </li>
+            <li class="product_menu_item">
+              <a href="#secure">secure</a>
+            </li>
+            <li class="product_menu_item">
+              <a href="#connect">connect</a>
+            </li>
+            <li class="product_menu_item">
+              <a href="#run">run</a>
+            </li>
+          </ul>
+          <div class="product_details_area">
+            <section id="overview" class="product_details_wrapper">
+              <div class="product_details">
+                <h3>The LandingCrop Stack</h3>
+                <p>
+                  Our tools provide a control plane for each layer of the cloud,
+                  enabling enterprises to make the shift to a cloud operating
+                  model. Each product addresses specific technical and
+                  organizational challenges of cloud infrastructure automation.
+                </p>
+              </div>
+              <div class="product_img">
+                <img src="./images/stack.png" alt="" />
+              </div>
+            </section>
+            <section id="provision" class="product_details_wrapper">
+              <div class="product_details">
+                <h3>Terraform</h3>
+                <p>
+                  Our tools provide a control plane for each layer of the cloud,
+                  enabling enterprises to make the shift to a cloud operating
+                  model. Each product addresses specific technical and
+                  organizational challenges of cloud infrastructure automation.
+                </p>
+              </div>
+              <div class="product_img">
+                <img src="./images/stack-terraform.png" alt="" />
+              </div>
+            </section>
+            <section id="secure" class="product_details_wrapper">
+              <div class="product_details">
+                <h3>secure</h3>
+                <p>
+                  Our tools provide a control plane for each layer of the cloud,
+                  enabling enterprises to make the shift to a cloud operating
+                  model. Each product addresses specific technical and
+                  organizational challenges of cloud infrastructure automation.
+                </p>
+              </div>
+              <div class="product_img">
+                <img src="./images/stack-terraform.png" alt="" />
+              </div>
+            </section>
+            <section id="connect" class="product_details_wrapper">
+              <div class="product_details">
+                <h3>secure</h3>
+                <p>
+                  Our tools provide a control plane for each layer of the cloud,
+                  enabling enterprises to make the shift to a cloud operating
+                  model. Each product addresses specific technical and
+                  organizational challenges of cloud infrastructure automation.
+                </p>
+              </div>
+              <div class="product_img">
+                <img src="./images/stack-terraform.png" alt="" />
+              </div>
+            </section>
+            <section id="run" class="product_details_wrapper">
+              <div class="product_details">
+                <h3>secure</h3>
+                <p>
+                  Our tools provide a control plane for each layer of the cloud,
+                  enabling enterprises to make the shift to a cloud operating
+                  model. Each product addresses specific technical and
+                  organizational challenges of cloud infrastructure automation.
+                </p>
+              </div>
+              <div class="product_img">
+                <img src="./images/stack-terraform.png" alt="" />
+              </div>
+            </section>
+          </div>
+        </div>
+        <!-- End of Product Area -->
+      </div>
+    </section>
+    <!-- End of Product Section -->
 
     <script>
       window.jQuery ||
