Add integration section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -497,6 +497,139 @@
     </section>
     <!-- End of Product Section -->
 
+    <!-- Start of Intergration Section -->
+    <section class="integrations_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="integration_left_info">
+              <h3>Run the infrastructure of your choice</h3>
+              <p>
+                HashiCorp maintains deep and broad partnerships across the
+                entire ecosystem of infrastructure vendors so you can support
+                your environment the way you want.
+              </p>
+              <a href="#"
+                >explore all Integration
+                <svg
+                  class="bi bi-arrow-right transtion"
+                  width="1em"
+                  height="1em"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                    clip-rule="evenodd"
+                  />
+                  <path
+                    fill-rule="evenodd"
+                    d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div class="integration_logo_list">
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="integration_logo">
+                <div class="logo">
+                  <a href="#">
+                    <img src="./images/aws.svg" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Intergration Section -->
+
     <script>
       window.jQuery ||
         document.write(
