Add call to action section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -630,6 +630,29 @@
     </section>
     <!-- End of Intergration Section -->
 
+    <!-- Start of Call to Action Section -->
+    <section class="call_to_action_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="call_to_action_title">
+              <h3>ready to get started?</h3>
+            </div>
+          </div>
+          <div class="col-md-9">
+            <div class="call_to_action_info">
+              <p>Request a demo or talk to our technical sales team to answer your questions.</p>
+              <div class="content_and_link">
+                <a href="#" class="sale_btn">Content Sales</a>
+                <a href="#" class="demo">Request a Demo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Call to Action Section -->
+
     <script>
       window.jQuery ||
         document.write(
