--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -641,7 +641,10 @@
           </div>
           <div class="col-md-9">
             <div class="call_to_action_info">
-              <p>Request a demo or talk to our technical sales team to answer your questions.</p>
+              <p>
+                Request a demo or talk to our technical sales team to answer
+                your questions.
+              </p>
               <div class="content_and_link">
                 <a href="#" class="sale_btn">Content Sales</a>
                 <a href="#" class="demo">Request a Demo</a>
@@ -652,6 +655,42 @@
       </div>
     </section>
     <!-- End of Call to Action Section -->
+
+    <!-- Start of Footer Section -->
+    <footer class="footer">
+      <!-- Start of newsletter -->
+      <div class="newsletter_wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-7">
+              <div class="newsletter_info">
+                <form action="">
+                  <input
+                    type="text"
+                    class="from-control"
+                    placeholder="Email Address"
+                  />
+                  <button>Subscribe to Newsletter</button>
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="defaultCheck1"
+                    />
+                    <label class="form-check-label" for="defaultCheck1">
+                      I agree to HashiCorp’s <a href="#">Privacy Policy</a>
+                    </label>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of newsletter -->
+    </footer>
+    <!-- End of Footer Section -->
 
     <script>
       window.jQuery ||
