Add Social section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -17,7 +17,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -689,6 +689,41 @@
         </div>
       </div>
       <!-- End of newsletter -->
+
+      <!-- Start of Social Wrapper -->
+      <div class="social_wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="social_info">
+                <div class="logo">
+                  <h2>LandingCrop</h2>
+                </div>
+                <div class="social_icon">
+                  <ul class="list-inline mb-0">
+                    <li class="list-inline-item">
+                      <a href="#">
+                        <i class="fa fa-facebook"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#">
+                        <i class="fa fa-twitter"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#">
+                        <i class="fa fa-github"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of Social Wrapper -->
     </footer>
     <!-- End of Footer Section -->
 
