Add footer bottom

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -923,6 +923,42 @@
         </div>
       </div>
       <!-- End of Footer Top Section -->
+
+      <!-- Start of Footer Bottom Section -->
+      <div class="footer_bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="footer_bottom_wrapper">
+                <div class="left">
+                  <ul class="list-inline mb-0">
+                    <li class="list-inline-item">
+                      <a href="#">system status</a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#">cookie manager</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="right">
+                  <ul class="list-inline mb-0">
+                    <li class="list-inline-item">
+                      <a href="#">system status</a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#">cookie manager</a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#">cookie manager</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of Footer Bottom Section -->
     </footer>
     <!-- End of Footer Section -->
 
