Add images for stack graphic

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -1084,7 +1084,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-terraform.png" alt="" />
+                <img src="./images/stack-0.png" alt="" />
               </div>
             </section>
             <section id="secure" class="product_details_wrapper">
@@ -1155,7 +1155,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-terraform.png" alt="" />
+                <img src="./images/stack-1.png" alt="" />
               </div>
             </section>
             <section id="connect" class="product_details_wrapper">
@@ -1225,7 +1225,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-terraform.png" alt="" />
+                <img src="./images/stack-2.png" alt="" />
               </div>
             </section>
             <section id="run" class="product_details_wrapper">
@@ -1246,7 +1246,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-terraform.png" alt="" />
+                <img src="./images/stack-3.png" alt="" />
               </div>
             </section>
           </div>
