--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="manifest" href="manifest.webmanifest" />
-    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="apple-touch-icon" href="/icon.png" />
     <!-- Place favicon.ico in the root directory -->
     <title>Landing Page</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
@@ -19,8 +19,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -711,22 +710,22 @@
       <div class="container">
         <div class="logo_list">
           <div class="single_logo">
-            <img src="./images/logo-triangle.svg" alt="" />
+            <img src="/images/logo-triangle.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="./images/logo-circleco.svg" alt="" />
+            <img src="/images/logo-circleco.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="./images/logo-hooli.svg" alt="" />
+            <img src="/images/logo-hooli.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="./images/logo-solarnets.svg" alt="" />
+            <img src="/images/logo-solarnets.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="./images/logo-innov8tor.svg" alt="" />
+            <img src="/images/logo-innov8tor.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="./images/logo-acmeindustries.svg" alt="" />
+            <img src="/images/logo-acmeindustries.svg" alt="" />
           </div>
         </div>
       </div>
@@ -779,7 +778,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/icon-network.svg" alt="" />
+                <img src="/images/icon-network.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Network</strong> icon</h3>
@@ -817,7 +816,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/icon-windows.svg" alt="" />
+                <img src="/images/icon-windows.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Windows</strong> icon</h3>
@@ -856,7 +855,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/icon-network.svg" alt="" />
+                <img src="/images/icon-robot.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Robot</strong> icon</h3>
@@ -895,7 +894,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="./images/icon-shield.svg" alt="" />
+                <img src="/images/icon-shield.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Shield</strong> icon</h3>
@@ -984,7 +983,7 @@
                 </p>
               </div>
               <div class="product_img">
-                <img src="./images/stack.png" alt="" />
+                <img src="/images/stack.png" alt="" />
               </div>
             </section>
             <section id="provision" class="product_details_wrapper">
@@ -1055,7 +1054,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-0.png" alt="" />
+                <img src="/images/stack-0.png" alt="" />
               </div>
             </section>
             <section id="secure" class="product_details_wrapper">
@@ -1127,7 +1126,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-1.png" alt="" />
+                <img src="/images/stack-1.png" alt="" />
               </div>
             </section>
             <section id="connect" class="product_details_wrapper">
@@ -1198,7 +1197,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-2.png" alt="" />
+                <img src="/images/stack-2.png" alt="" />
               </div>
             </section>
             <section id="run" class="product_details_wrapper">
@@ -1219,7 +1218,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="./images/stack-3.png" alt="" />
+                <img src="/images/stack-3.png" alt="" />
               </div>
             </section>
           </div>
@@ -1271,84 +1270,84 @@
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="./images/aws.svg" alt="" />
+                    <img src="/images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
@@ -1618,12 +1617,12 @@
     <script>
       window.jQuery ||
         document.write(
-          '<script src="js/vendor/jquery-3.4.1.min.js"><\/script>'
+          '<script src="/js/vendor/jquery-3.4.1.min.js"><\/script>'
         );
     </script>
-    <script src="./js/vendor/bootstrap.min.js"></script>
-    <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/vendor/bootstrap.min.js"></script>
+    <script src="/js/vendor/modernizr-3.8.0.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
