Set landingcorp theme-color meta tag

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="/css/main.css" />
 
-    <meta name="theme-color" content="#fafafa" />
+    <meta name="theme-color" content="#ff5533" />
   </head>
 
   <body>
