--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="/icon.png" />
     <!-- Place favicon.ico in the root directory -->
     <title>Landing Page</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
 
     <meta name="theme-color" content="#ff5533" />
   </head>
@@ -710,22 +710,22 @@
       <div class="container">
         <div class="logo_list">
           <div class="single_logo">
-            <img src="/images/logo-triangle.svg" alt="" />
+            <img src="./images/logo-triangle.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="/images/logo-circleco.svg" alt="" />
+            <img src="./images/logo-circleco.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="/images/logo-hooli.svg" alt="" />
+            <img src="./images/logo-hooli.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="/images/logo-solarnets.svg" alt="" />
+            <img src="./images/logo-solarnets.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="/images/logo-innov8tor.svg" alt="" />
+            <img src="./images/logo-innov8tor.svg" alt="" />
           </div>
           <div class="single_logo">
-            <img src="/images/logo-acmeindustries.svg" alt="" />
+            <img src="./images/logo-acmeindustries.svg" alt="" />
           </div>
         </div>
       </div>
@@ -778,7 +778,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="/images/icon-network.svg" alt="" />
+                <img src="./images/icon-network.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Network</strong> icon</h3>
@@ -816,7 +816,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="/images/icon-windows.svg" alt="" />
+                <img src="./images/icon-windows.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Windows</strong> icon</h3>
@@ -855,7 +855,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="/images/icon-robot.svg" alt="" />
+                <img src="./images/icon-robot.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Robot</strong> icon</h3>
@@ -894,7 +894,7 @@
           <div class="col-lg-6 col-sm-12">
             <div class="single_solution transtion mb-3">
               <div class="icon">
-                <img src="/images/icon-shield.svg" alt="" />
+                <img src="./images/icon-shield.svg" alt="" />
               </div>
               <div class="body">
                 <h3><strong>Shield</strong> icon</h3>
@@ -983,7 +983,7 @@
                 </p>
               </div>
               <div class="product_img">
-                <img src="/images/stack.png" alt="" />
+                <img src="./images/stack.png" alt="" />
               </div>
             </section>
             <section id="provision" class="product_details_wrapper">
@@ -1053,7 +1053,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="/images/stack-0.png" alt="" />
+                <img src="./images/stack-0.png" alt="" />
               </div>
             </section>
             <section id="secure" class="product_details_wrapper">
@@ -1124,7 +1124,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="/images/stack-1.png" alt="" />
+                <img src="./images/stack-1.png" alt="" />
               </div>
             </section>
             <section id="connect" class="product_details_wrapper">
@@ -1194,7 +1194,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="/images/stack-2.png" alt="" />
+                <img src="./images/stack-2.png" alt="" />
               </div>
             </section>
             <section id="run" class="product_details_wrapper">
@@ -1214,7 +1214,7 @@
                 </ul>
               </div>
               <div class="product_img">
-                <img src="/images/stack-3.png" alt="" />
+                <img src="./images/stack-3.png" alt="" />
               </div>
             </section>
           </div>
@@ -1266,84 +1266,84 @@
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-sat.png" alt="" />
+                    <img src="./images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-1nezer0.png" alt="" />
+                    <img src="./images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-a2z.png" alt="" />
+                    <img src="./images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-sat.png" alt="" />
+                    <img src="./images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-1nezer0.png" alt="" />
+                    <img src="./images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-a2z.png" alt="" />
+                    <img src="./images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-sat.png" alt="" />
+                    <img src="./images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-1nezer0.png" alt="" />
+                    <img src="./images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-a2z.png" alt="" />
+                    <img src="./images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-sat.png" alt="" />
+                    <img src="./images/highlights-sat.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-1nezer0.png" alt="" />
+                    <img src="./images/highlights-1nezer0.png" alt="" />
                   </a>
                 </div>
               </div>
               <div class="integration_logo">
                 <div class="logo">
                   <a href="#">
-                    <img src="/images/highlights-a2z.png" alt="" />
+                    <img src="./images/highlights-a2z.png" alt="" />
                   </a>
                 </div>
               </div>
@@ -1458,22 +1458,22 @@
                 <div class="footer_logo">
                   <span>Verb A</span>
                   <p>Subject A</p>
-                  <img src="/images/footer-graphics-a.svg" alt="" />
+                  <img src="./images/footer-graphics-a.svg" alt="" />
                 </div>
                 <div class="footer_logo">
                   <span>Verb B</span>
                   <p>Subject B</p>
-                  <img src="/images/footer-graphics-b.svg" alt="" />
+                  <img src="./images/footer-graphics-b.svg" alt="" />
                 </div>
                 <div class="footer_logo">
                   <span>Verb C</span>
                   <p>Subject C</p>
-                  <img src="/images/footer-graphics-c.svg" alt="" />
+                  <img src="./images/footer-graphics-c.svg" alt="" />
                 </div>
                 <div class="footer_logo">
                   <span>Verb D</span>
                   <p>Subject D</p>
-                  <img src="/images/footer-graphics-d.svg" alt="" />
+                  <img src="./images/footer-graphics-d.svg" alt="" />
                 </div>
               </div>
             </div>
@@ -1613,12 +1613,12 @@
     <script>
       window.jQuery ||
         document.write(
-          '<script src="/js/vendor/jquery-3.4.1.min.js"><\/script>'
+          '<script src="./js/vendor/jquery-3.4.1.min.js"><\/script>'
         );
     </script>
-    <script src="/js/vendor/bootstrap.min.js"></script>
-    <script src="/js/vendor/modernizr-3.8.0.min.js"></script>
-    <script src="/js/plugins.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/vendor/bootstrap.min.js"></script>
+    <script src="./js/vendor/modernizr-3.8.0.min.js"></script>
+    <script src="./js/plugins.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
