--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -41,6 +41,7 @@
         <a class="navbar-brand" href="#">Landing Page</a>
         <button
           class="navbar-toggler"
+          id="navbar_toggler"
           type="button"
           data-toggle="collapse"
           data-target="#navbarSupportedContent"
@@ -48,7 +49,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <i class="fa fa-bars"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
