--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -709,26 +709,26 @@
     <!-- Start of Trusted Section -->
     <section class="trusted_logo">
       <div class="container">
-        <div class="logo_list">
-          <div class="single_logo">
+        <ol class="list-inline mb-0 logo_list">
+          <li class="single_logo">
             <img src="./images/logo-triangle.svg" alt="" />
-          </div>
-          <div class="single_logo">
+          </li>
+          <li class="single_logo">
             <img src="./images/logo-circleco.svg" alt="" />
-          </div>
-          <div class="single_logo">
+          </li>
+          <li class="single_logo">
             <img src="./images/logo-hooli.svg" alt="" />
-          </div>
-          <div class="single_logo">
+          </li>
+          <li class="single_logo">
             <img src="./images/logo-solarnets.svg" alt="" />
-          </div>
-          <div class="single_logo">
+          </li>
+          <li class="single_logo">
             <img src="./images/logo-innov8tor.svg" alt="" />
-          </div>
-          <div class="single_logo">
+          </li>
+          <li class="single_logo">
             <img src="./images/logo-acmeindustries.svg" alt="" />
-          </div>
-        </div>
+          </li>
+        </ol>
       </div>
     </section>
     <!-- End of Trusted Section -->
